--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="Images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>AIG - ARDOG IN GERMANY</title>
     <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
