--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AIG</title>
+    <title>AIG - ARDOG IN GERMANY</title>
+    <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
+    <script type="text/javascript"></script>
   </body>
 </html>
